force-app/main/default/objects/ucinn_ascendv2__Work_Plan_Percentage__c/ucinn_ascendv2__Work_Plan_Percentage__c.object-meta.xml
<CustomObject>
    <description>Work Plan breakdown for Work Plan Units.</description>
    <label>Work Plan Percentage</label>
    <nameField>
        <label>Work Plan Percentage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Plan Percentages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>