force-app/main/default/objects/ucinn_ascendv2__Work_Plan_Percentage__c/fields/ucinn_ascendv2__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Opportunity__c</fullName>
    <label>Proposal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Work Plan Percentages</relationshipLabel>
    <relationshipName>Work_Plan_Percentages_Opportunity</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>