force-app/main/default/objects/ucinn_ascendv2__Work_Plan_Percentage__c/fields/ucinn_ascendv2__Work_Plan_Percentage_Name_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Work_Plan_Percentage_Name_Auto_Number__c</fullName>
    <displayFormat>WPP-{0000000}</displayFormat>
    <label>Work Plan Percentage Name Auto Number</label>
    <type>AutoNumber</type>
</CustomField>