force-app/main/default/objects/ucinn_ascendv2__Work_Plan_Percentage__c/fields/ucinn_ascendv2__Work_Plan_Unit__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Work_Plan_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Plan Unit</label>
    <referenceTo>ucinn_ascendv2__Work_Plan_Unit__c</referenceTo>
    <relationshipLabel>Work Plan Percentages</relationshipLabel>
    <relationshipName>Work_Plan_Percentages_Work_Plan_Unit</relationshipName>
    <type>Lookup</type>
</CustomField>