force-app/main/default/objects/ucinn_ascendv2__Work_Plan_Percentage__c/fields/ucinn_ascendv2__Work_Plan_Unit_Percent__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Work_Plan_Unit_Percent__c</fullName>
    <label>Work Plan Unit %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>